test: Don't use string templates (preview)